# news_agent

./: .gitignore  README.md  main.py  news_triage_agent_assignment.md  pyproject.toml  run_adk_web.ps1
adk_agents/news_agent_ui/: agent.py
config/: news_agent.yaml  news_agent_free.yaml  news_agent_gemini.yaml  news_agent_ollama.yaml  news_agent_openai.yaml
config/html/: report.html
config/outlets/: free_outlets.yaml  openai_outlets.yaml
config/prompts/: article_curation.txt  candidate_filter.txt  metric_extraction.txt  query_planning.txt  question_analysis.txt  summarization.txt  web_search_research.txt
config/prompts/analysis/: evidence_based_analysis.txt  speculative_red_team_analysis.txt
config/prompts/common/: editorial_standards.txt
config/prompts/web_search/: adaptive_react_repair_planner.txt  web_search_research_baseline.txt  web_search_research_cot.txt  web_search_research_new.txt  web_search_research_new_a_short.txt  web_search_research_new_b_diversity.txt  web_search_research_new_c_query_variants_first.txt  web_search_research_new_d_minimal.txt  web_search_research_tot.txt  (+1 more)
docs/: ARCHITECTURE.md  FINE_TUNING_PLAN.md  FREE_PIPELINE.md  LEARNING_LOG.md  architecture_with_rendered_diagrams.html
scripts/: freenewsapi.ps1  run_web_search_prompt_experiments.py
src/news_agent/: __init__.py  app.py  command.py  config.py  html_report.py  main.py  model.py  schemas.py  search.py  usage.py  workflow.py
tests/: test_analysis.py  test_config.py  test_integration_cli.py  test_pipeline.py  test_prompt_service.py  test_report.py  test_services.py
(+86 files in other folders)
