# We use plain `venv` plus `pyproject.toml` on purpose:
# - `venv` is built into Python and matches the ADK quickstart.
# - `pyproject.toml` is the standard Python place for dependencies and metadata.
# - We are not using Poetry because this repo is still a small learning project,
#   and a second workflow layer would add complexity without helping the agent design.
# - We are not using `uv` as the main workflow because it was not installed here and
#   the goal is to keep setup runnable with stock Python tooling.

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "news-agent"
version = "0.1.0"
description = "Kaggle Day 1B-inspired news triage agent built with Google ADK."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  # Google ADK is the orchestration layer for the coordinator + sequential workflow.
  "google-adk>=1.28,<2.0",
  # OpenAI is the hosted inference and web-search backend for research and summarization.
  "openai>=1.75,<2.0",
  # Requests is the light HTTP client for Google News RSS retrieval and article fetches.
  "requests>=2.32,<3.0",
  # PyYAML loads the external runtime config from `config/*.yaml`.
  "PyYAML>=6.0,<7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
